--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "glob": "^8.1.0",
     "i18next-http-backend": "^3.0.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.3"
